[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/uemg.png" type="Texture" id=2]
[ext_resource path="res://assets/styles/new_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/grid-background.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.505882, 0.0823529, 0.0823529, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.733333, 0.278431, 0.278431, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.733333, 0.278431, 0.278431, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 12
border_color = Color( 0.505882, 0.0823529, 0.0823529, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.137255, 0.345098, 0.141176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.180392, 0.603922, 0.27451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.180392, 0.603922, 0.27451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 12
border_color = Color( 0.137255, 0.345098, 0.141176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="grid" type="Sprite" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.117647 )
position = Vector2( 640, 368 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1296, 752 )

[node name="uemg-logo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 32, 688 )
texture = ExtResource( 2 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -112.0
margin_right = 120.0
margin_bottom = 112.0
theme = ExtResource( 3 )

[node name="bt_figuras" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_right = 240.0
margin_bottom = 72.0
text = "Figuras"

[node name="bt_tangram" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_top = 76.0
margin_right = 240.0
margin_bottom = 148.0
text = "Tangram"

[node name="bt_sair" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_top = 152.0
margin_right = 240.0
margin_bottom = 224.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Fechar"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -188.0
margin_right = 120.0
margin_bottom = 188.0
theme = ExtResource( 3 )

[node name="bt_gato" type="Button" parent="CanvasLayer2/VBoxContainer2"]
margin_right = 240.0
margin_bottom = 72.0
text = "Gato"

[node name="bt_peixe" type="Button" parent="CanvasLayer2/VBoxContainer2"]
margin_top = 76.0
margin_right = 240.0
margin_bottom = 148.0
text = "Peixe"

[node name="bt_barco" type="Button" parent="CanvasLayer2/VBoxContainer2"]
margin_top = 152.0
margin_right = 240.0
margin_bottom = 224.0
text = "Barco"

[node name="bt_foguete" type="Button" parent="CanvasLayer2/VBoxContainer2"]
margin_top = 228.0
margin_right = 240.0
margin_bottom = 300.0
text = "Foguete"

[node name="bt_voltar" type="Button" parent="CanvasLayer2/VBoxContainer2"]
margin_top = 304.0
margin_right = 240.0
margin_bottom = 376.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "< Voltar"

[connection signal="pressed" from="CanvasLayer2/VBoxContainer/bt_tangram" to="." method="_on_bt_tangram_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer/bt_sair" to="." method="_on_bt_sair_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer2/bt_gato" to="." method="_on_bt_gato_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer2/bt_peixe" to="." method="_on_bt_peixe_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer2/bt_barco" to="." method="_on_bt_barco_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer2/bt_foguete" to="." method="_on_bt_foguete_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer2/bt_voltar" to="." method="_on_bt_voltar_pressed"]
